--- a/AddressBook/src/AddressBook.Web/Pages/AddressF/CreateModal.cshtml
+++ b/AddressBook/src/AddressBook.Web/Pages/AddressF/CreateModal.cshtml
@@ -1,19 +1,24 @@
 ﻿@page
 @using AddressBook.Localization
-@using AddressBook.Web.Pages.Locations
+@using AddressBook.Web.Pages.AddressF
 @using Microsoft.Extensions.Localization
 @using Volo.Abp.AspNetCore.Mvc.UI.Bootstrap.TagHelpers.Modal
+
 @model CreateModalModel
 @inject IStringLocalizer<AddressBookResource> L
 @{
     Layout = null;
 }
-<abp-dynamic-form abp-model="Location" asp-page="/Locations/CreateModal">
+<form asp-page="/AddressF/CreateModal">
     <abp-modal>
-        <abp-modal-header title="@L["NewLocation"].Value"></abp-modal-header>
+        <abp-modal-header title="@L["NewAddress"].Value"></abp-modal-header>
         <abp-modal-body>
-            <abp-form-content />
+            <abp-input asp-for="Address.Street" />
+            <abp-input asp-for="Address.City" />
+            <abp-input asp-for="Address.State" />
+            <abp-input asp-for="Address.PostalCode" />
+            <abp-input asp-for="Address.Country" />
         </abp-modal-body>
         <abp-modal-footer buttons="@(AbpModalButtons.Cancel|AbpModalButtons.Save)"></abp-modal-footer>
     </abp-modal>
-</abp-dynamic-form>
+</form>
