--- a/AddressBook/src/AddressBook.Web/Pages/AddressF/EditModal.cshtml
+++ b/AddressBook/src/AddressBook.Web/Pages/AddressF/EditModal.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @using AddressBook.Localization
-@using AddressBook.Web.Pages.Locations
+@using AddressBook.Web.Pages.AddressF
 @using Microsoft.Extensions.Localization
 @using Volo.Abp.AspNetCore.Mvc.UI.Bootstrap.TagHelpers.Modal
 @model EditModalModel
@@ -8,13 +8,17 @@
 @{
     Layout = null;
 }
-<abp-dynamic-form abp-model="Location" asp-page="/Locations/EditModal">
+<form asp-page="/AddressF/EditModal">
     <abp-modal>
         <abp-modal-header title="@L["Update"].Value"></abp-modal-header>
         <abp-modal-body>
-            <abp-input asp-for="Id" />
-            <abp-form-content />
+            <abp-input asp-for="Address.Id" />
+            <abp-input asp-for="Address.Street" />
+            <abp-input asp-for="Address.City" />
+            <abp-input asp-for="Address.State" />
+            <abp-input asp-for="Address.PostalCode" />
+            <abp-input asp-for="Address.Country" />
         </abp-modal-body>
         <abp-modal-footer buttons="@(AbpModalButtons.Cancel|AbpModalButtons.Save)"></abp-modal-footer>
     </abp-modal>
-</abp-dynamic-form>
+</form>
